# BBCut

./: .gitignore  BBCut.quark  CHANGELOG.md  CMakeLists.txt  INSTALL  README.md
HelpSource/Classes/: AnalyseEventsDatabase.schelp  BBCPPermute.schelp  BBCut2.schelp  BBCutBlock.schelp  BBCutBuffer.schelp  BBCutProc.schelp  BBCutProc11.schelp  BBCutQuantise1.schelp  BufSelector.schelp  CageCut.schelp  CampCutProc.schelp  ChooseBlockProc.schelp  ChooseCutProc.schelp  CutBPF1.schelp  CutBRF1.schelp  CutBit1.schelp  CutBuf1.schelp  CutBuf2.schelp  CutBuf3.schelp  CutComb1.schelp  CutFXSwap1.schelp  CutFunc.schelp  CutGroup.schelp  CutLab.schelp  CutMixer.schelp  CutMod1.schelp  CutOSC.schelp  CutPBS1.schelp  CutPan1.schelp  CutProcStream.schelp  CutRev1.schelp  CutStream1.schelp  CutStream2.schelp  CutStream3.schelp  CutTape1.schelp  CutTrace.schelp  CutTrig1.schelp  DrumTrack.schelp  EventStreamPlayer2.schelp  ExternalClock.schelp  (+19 more)
HelpSource/Overviews/: BBCut.schelp  BBCut2.schelp
HelpSource/Tutorials/: BBCut2Examples.schelp  BBCutExamples.schelp  BBCutInternals.schelp
bbcut2 classes/GUI/: DDSlider.sc
bbcut2 classes/bbcutprocs/: CampCutProc.sc  ChooseBlockProc.sc  ChooseCutProc.sc  MotifCutProc.sc  RecursiveCutProc1.sc  SQPusher2.sc
bbcut2 classes/core/: BBCutBuffer.sc  CutGroup.sc
bbcut2 help/: bbcut2 installation.help.rtf
bbcut2 source/: AnalyseEvents2.cpp  AutoTrack.cpp
bbcut2 ugens/: AnalyseEvents2.scx  AutoTrack.scx  DrumTrack.scx
help/: BBCut2Wiki.help.rtf  BBCutLibrary.help.rtf
sounds/: break.aiff  break2
src/: DrumTrack.cpp
(+149 files in other folders)
